# misis2024s-23-18-tsukanov-s-u

./: .gitignore  .gitmodules  CMakeLists.txt  codeforces.id  reports.md  status.md
prj.app/: CMakeLists.txt
prj.app/robocalc/: CMakeLists.txt  input.txt  robocalc.cpp  robocalc.hpp  robocalc_app.cpp
prj.app/robocalc/comands/: CMakeLists.txt  comands.cpp  comands.hpp
prj.app/timing_q/: CMakeLists.txt  timing_q.cpp
prj.cw/: readme.md
prj.lab/: CMakeLists.txt
prj.lab/StackArr/: CMakeLists.txt  StackArr.cpp  StackArr.hpp
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelist/: CMakeLists.txt  queuelist.cpp  queuelist.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stacklist/: CMakeLists.txt  stacklist.cpp  stacklist.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  test_StackArr.cpp  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelist.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stacklist.cpp  test_stacklst.cpp  test_stacklstt.cpp
